syntax = "proto3";

package grabber;

service AcademyService {
    rpc GetAcademy (GetAcademyRequest) returns (ListAcademiesResponse) {}
    rpc ListAcademies (ListAcademiesRequest) returns (ListAcademiesResponse) {}
}

message Academy {
    string type = 1;
    string id = 2;
    message Attributes {
        string name = 1;
        string abbreviation = 2;
        string alias = 3;
        string website = 4;
        string endpoint = 5;
        string version = 6;
        repeated string disabledSources = 7;
    }
    Attributes attributes = 3;
    message Relationships {}
    Relationships relationships = 4;
}

message GetAcademyRequest {
    string id = 1;
}

message ListAcademiesRequest {}

message ListAcademiesResponse {
    repeated Academy data = 1;
    string next_page_token = 2;
}
